# SummerWelcomeSignUp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dataout/: responses.csv
src/signupform/: app.py
src/signupform/datacomponents/: Data.py  Response.py
src/signupform/displaycomponents/: ProgramContext.py  Title.py
src/signupform/formcomponents/: Email.py  Name.py  Selections.py  Title.py
